src/uff/dew/svp/javaccparser/XQueryParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. XQueryParser.java */
package uff.dew.svp.javaccparser;
public class XQueryParser/*@bgen(jjtree)*/implements XQueryParserTreeConstants, XQueryParserConstants {/*@bgen(jjtree)*/
  protected JJTXQueryParserState jjtree = new JJTXQueryParserState();

  final public SimpleNode Start() throws ParseException, Exception {
                                       /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ElmtConstructor();
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
     {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     if (jjte000 instanceof Exception) {
       {if (true) throw (Exception)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public void ElmtConstructor() throws ParseException, Exception {
                                         /*@bgen(jjtree) ElmtConstructor */
  ASTElmtConstructor jjtn000 = new ASTElmtConstructor(JJTELMTCONSTRUCTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2147483647)) {
        jj_consume_token(LESS_THAN);
        QName();
        AttList();
        jj_consume_token(SLASH_GREATER_THAN);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LESS_THAN:
          jj_consume_token(LESS_THAN);
          QName();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
            AttList();
            break;
          default:
            jj_la1[0] = jj_gen;
            ;
          }
          jj_consume_token(GREATER_THAN);
          label_1:
          while (true) {
            ElmtContent();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case L_BRACE:
            case LESS_THAN:
              ;
              break;
            default:
              jj_la1[1] = jj_gen;
              break label_1;
            }
          }
          EndTag();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     if (jjte000 instanceof Exception) {
       {if (true) throw (Exception)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void ElmtContent() throws ParseException, Exception {
                                    /*@bgen(jjtree) ElmtContent */
  ASTElmtContent jjtn000 = new ASTElmtContent(JJTELMTCONTENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESS_THAN:
        ElmtConstructor();
        break;
      case L_BRACE:
        label_2:
        while (true) {
          EnclosedExpr();
          if (jj_2_2(2)) {
            ;
          } else {
            break label_2;
          }
        }
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     if (jjte000 instanceof Exception) {
       {if (true) throw (Exception)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void EndTag() throws ParseException, Exception {
                               /*@bgen(jjtree) EndTag */
  ASTEndTag jjtn000 = new ASTEndTag(JJTENDTAG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LESS_THAN_SLASH);
      QName();
      jj_consume_token(GREATER_THAN);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     if (jjte000 instanceof Exception) {
       {if (true) throw (Exception)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void AttList() throws ParseException, Exception {
                                /*@bgen(jjtree) AttList */
  ASTAttList jjtn000 = new ASTAttList(JJTATTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      AttributeValuePair();
      if (jj_2_3(2)) {
        AttList();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     if (jjte000 instanceof Exception) {
       {if (true) throw (Exception)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void AttributeValuePair() throws ParseException, Exception {
                                           /*@bgen(jjtree) AttributeValuePair */
  ASTAttributeValuePair jjtn000 = new ASTAttributeValuePair(JJTATTRIBUTEVALUEPAIR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      QName();
      jj_consume_token(EQUALS);
      AttValue();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     if (jjte000 instanceof Exception) {
       {if (true) throw (Exception)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void AttValue() throws ParseException, Exception {
                                 /*@bgen(jjtree) AttValue */
  ASTAttValue jjtn000 = new ASTAttValue(JJTATTVALUE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QUOTE:
        jj_consume_token(QUOTE);
        AttValueContent();
        jj_consume_token(QUOTE);
        break;
      case SINGLEQUOTE:
        jj_consume_token(SINGLEQUOTE);
        AttValueContent();
        jj_consume_token(SINGLEQUOTE);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
       if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       if (jjte000 instanceof Exception) {
         {if (true) throw (Exception)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  final public void AttValueContent() throws ParseException, Exception {
                                        /*@bgen(jjtree) AttValueContent */
  ASTAttValueContent jjtn000 = new ASTAttValueContent(JJTATTVALUECONTENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(L_BRACE);
      PathExpr();
      jj_consume_token(R_BRACE);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     if (jjte000 instanceof Exception) {
       {if (true) throw (Exception)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void PathExpr() throws ParseException, Exception {
                                 /*@bgen(jjtree) PathExpr */
  ASTPathExpr jjtn000 = new ASTPathExpr(JJTPATHEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_4(2)) {
        jj_consume_token(DOLLAR);
        VarName();
        SimplePathExpr();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOLLAR:
          SimplePathExpr2();
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      if (jjte000 instanceof Exception) {
        {if (true) throw (Exception)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }
